# pipecate-aviationstack

./: .gitignore  README.md  agent_bot.py  main.py  pyproject.toml  tools.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  speak-agent.tsx
